--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+:root {
+  --background-1: linear-gradient(135deg, #ECE9E6, #FFFFFF);
+  --background-2: linear-gradient( 135deg, #FF7AF5 10%, #513162 100%);
+
+  --color-1: black;
+  --color-2: white;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -7,6 +17,23 @@
 html,
 body {
   max-width: 100vw;
+  min-height: 100dvh;
   overflow-x: hidden;
+  font-family: "Montserrat";
+
+  background: var(--background-1);
+  color: var(--color-1);
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+button {
+  padding: 5px 10px;
+  font-size: 1em;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
