--- a/src/app/components/Navbar/Navbar.css
+++ b/src/app/components/Navbar/Navbar.css
@@ -1,14 +1,20 @@
 .Navbar {
     background: var(--background-2);
     color: var(--color-2);
+    box-shadow: var(--box-shadow-2);
     max-width: 800px;
     min-height: 50px;
     border-radius: 12px;
-    margin: 20px auto;
+    margin: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    width: 90%;
+}
+
+.Navbar:hover {
+    box-shadow: var(--box-shadow-2-hover);
 }
 
 .nav-links {
@@ -17,4 +23,22 @@
     align-items: center;
     gap: 10px;
     font-style: italic;
+    overflow-x: scroll;
+    margin-right: 20px;
+    /* border-right: 10px solid var(--color-2); */
+    /* animation: blinker 3s linear infinite; */
+}
+
+@keyframes blinker {
+    50% {
+        border-right: 0px;
+    }
+}
+
+.nav-link {
+    white-space: nowrap;
+}
+
+.nav-link:hover {
+    text-decoration: underline;
 }
