--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,28 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-  --background-1: linear-gradient(135deg, #ECE9E6, #FFFFFF);
-  --background-2: linear-gradient( 135deg, #FF7AF5 10%, #513162 100%);
-
+  --background-1: white;
   --color-1: black;
+
+  --background-2: #8338ec;
   --color-2: white;
+  --box-shadow-2: #2a0065 -5px 5px;
+  --box-shadow-2-hover: #2a0065 -10px 10px;
 }
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  transition: .5s;
 }
 
 html,
 body {
-  max-width: 100vw;
+  width: 100vw;
   min-height: 100dvh;
   overflow-x: hidden;
   font-family: "Montserrat";
-
   background: var(--background-1);
   color: var(--color-1);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 a {
