--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-  --background-1: #2a2929;
+  --background-1: #191919;
+  --background-1-secondary: #232323;
   --color-1: #bfbfbf;
-  --border-color-1: #1d283a;
+  --border-color-1: #2e2e2e;
 }
 
 * {
@@ -42,4 +43,8 @@ button {
 
 main {
   width: 100%;
+}
+
+section {
+  padding: 10px;
 }
