--- a/src/app/components/Forms/Forms.css
+++ b/src/app/components/Forms/Forms.css
@@ -1,3 +1,11 @@
+.contender-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 20px;
+}
+
 form {
     display: flex;
     flex-direction: column;
