--- a/src/app/components/MatchPlayer/MatchPlayer.css
+++ b/src/app/components/MatchPlayer/MatchPlayer.css
@@ -27,5 +27,5 @@
     background: var(--color-1);
     color: black;
     font-size: 1em;
-    border: none;
+    border: 1px solid var(--border-color-1);
 }
