--- a/src/app/components/GroupCard/GroupCard.css
+++ b/src/app/components/GroupCard/GroupCard.css
@@ -2,3 +2,9 @@
     flex-grow: 1;
     max-width: 500px;
 }
+
+.group-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
