--- a/src/app/components/GroupStandings/GroupStandings.css
+++ b/src/app/components/GroupStandings/GroupStandings.css
@@ -2,6 +2,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
+    padding: 5px 10px;
+    border-bottom: 1px solid var(--border-color-1);
 }
 
 .group-player-stats {
@@ -9,4 +12,20 @@
     justify-content: flex-end;
     align-items: center;
     gap: 10px;
+}
+
+.position {
+    font-size: 1em;
+    opacity: 0.5;
+    padding: 5px;
+}
+
+.position.position-1 {
+    opacity: 1;
+    background: gold;
+}
+
+.position.position-2 {
+    opacity: 1;
+    background: silver;
 }
