--- a/src/app/components/MatchPlayer/MatchPlayer.css
+++ b/src/app/components/MatchPlayer/MatchPlayer.css
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 5px;
 }
 
 .match-player-body {
@@ -24,8 +25,6 @@
     height: 100%;
     text-align: center;
     line-height: 50px;
-    background: var(--color-1);
     color: black;
     font-size: 1em;
-    border: 1px solid var(--border-color-1);
 }
