--- a/src/app/components/MatchCard/MatchCard.css
+++ b/src/app/components/MatchCard/MatchCard.css
@@ -4,3 +4,11 @@
     align-items: center;
     padding: 5px;
 }
+
+.match-body {
+    display: flex;
+    flex-direction: column;
+    min-height: 195px;
+    justify-content: space-between;
+    align-items: center;
+}
