--- a/src/app/components/MatchList/MatchList.css
+++ b/src/app/components/MatchList/MatchList.css
@@ -1,7 +1,7 @@
 .match-list {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     gap: 10px;
     padding: 10px 0;
