did some styling

--- a/src/app/components/Draw/Draw.css
+++ b/src/app/components/Draw/Draw.css
@@ -4,6 +4,7 @@
     align-items: flex-start;
     overflow-x: scroll;
     gap: 10px;
+    background: var(--background-2);
 }
 
 .draw-round-details {
@@ -11,4 +12,9 @@
     justify-content: space-between;
     align-items: center;
     padding: 5px 10px;
+}
+
+.draw-round.card {
+    background: transparent;
+    border: none;
 }
