--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,7 +66,6 @@ section {
   border-radius: 5px;
   background: var(--background-2);
   color: var(--border-color-2);
-  box-shadow: 0 5px 5px #0000002e;
   border: 1px solid var(--border-color-1);
   width: 400px;
   min-height: 225px;
@@ -86,4 +85,15 @@ section {
   justify-content: flex-start;
   align-items: center;
   padding: 10px 0;
+}
+
+.page-expand-buttons button {
+  background: transparent;
+  color: var(--color-1);
+}
+
+@media screen and (max-width: 600px) {
+  body {
+    font-size: 14px;
+  }
 }
