--- a/src/app/components/Forms/Forms.css
+++ b/src/app/components/Forms/Forms.css
@@ -28,3 +28,9 @@ input {
     color: var(--color-1);
     padding: 5px;
 }
+
+.generate-handicap-draw-body {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
