--- a/src/app/components/Forms/Forms.css
+++ b/src/app/components/Forms/Forms.css
@@ -34,3 +34,19 @@ input {
     justify-content: space-between;
     width: 100%;
 }
+
+.qualified-players {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 20px;
+}
+
+.qualify-players {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 10px;
+}
