--- a/src/app/components/MatchCard/MatchCard.css
+++ b/src/app/components/MatchCard/MatchCard.css
@@ -13,6 +13,6 @@
     display: flex;
     flex-direction: column;
     min-height: 195px;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
